# domain-designer-core-ts

./: .gitignore  README.md  globals.d.ts  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json  vite.config.ts  vitest.config.ts
lib/: actor.ts  agg.ts  check.ts  command.ts  common.ts  define.ts  desc.ts  event.ts  field.ts  index.ts  info.ts  note.ts  person.ts  policy.ts  read-model.ts  service.ts  system.ts
lib/__tests__/: __framework.test.ts  _type-trans.test.ts  actor.test.ts  agg.test.ts  check.test.ts  command.test.ts  define.test.ts  desc.test.ts  event.test.ts  index.test.ts  info.test.ts  note.test.ts  policy.test.ts  read-model.test.ts  service.test.ts  stories.test.ts  system.test.ts
lib/check/: index.ts  package.json  vite.config.ts  wasm.d.ts  wasm.js  wasm_bg.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
lib/check/__tests__/: check.test.ts  index.test.ts
lib/info/: field.ts  index.ts
lib/wasm/: index.ts  wasm.d.ts  wasm.js  wasm_bg.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
scripts/: gen-package-info.mjs  sync-wasm.mjs  wasm-test.mjs
wasm/: Cargo.toml
wasm/src/: lib.rs  strsim.rs
