[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "wasm"

[dependencies]
js-sys = "0.3"
serde = { version = '1', features = ['derive'] }
serde-wasm-bindgen = "0.6.5"
# serde_json = "1"
serde_repr = "0.1"
strsim = "0.11.1"
wasm-bindgen = { version = "0.2", features = ['default', 'serde'] }

[profile.release]
lto = true
opt-level = 's'
